<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdu.zhiji.MBTI.mbti_DetailResultActivity">

    <LinearLayout
        android:padding="@dimen/marg_s"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/detail_e"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_e"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_i"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_i"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_s"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_s"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_n"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_n"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_t"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_t"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_f"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_f"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_j"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_j"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_p"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detail_p"
            android:text=""
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
