<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdu.zhiji.mbti_AboutAppActivity">

    <LinearLayout
        android:padding="@dimen/fab_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="@dimen/marg_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:text="@string/about_app_version"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"
            android:layout_margin="@dimen/marg_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/about_app_devs"
            android:textSize="@dimen/text_h3"
            android:layout_margin="@dimen/marg_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
