<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdu.zhiji.MBTI.mbti_PrewordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/mbtiup"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <LinearLayout
            android:layout_margin="@dimen/fab_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/preword_title"
                android:textSize="@dimen/text_h1"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/marg_s"
                android:layout_marginTop="@dimen/marg_s"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/preword_text"
                android:textSize="@dimen/text_h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/preword_next"
                android:text="@string/test_next"
                android:textSize="@dimen/text_h3"
                android:textStyle="bold"
                android:textColor="#fff"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/marg_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
