<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/mbti_app_bar_main"
    tools:context="com.sdu.zhiji.MBTI.mbti_MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/mbti1"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/main_title"
                    android:textSize="@dimen/text_h1"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/marg_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/main_btn_start_short"
                    android:text="@string/main_btn_start_short"
                    android:textSize="@dimen/text_h3"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginBottom="@dimen/marg_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/main_btn_start_long"
                    android:text="@string/main_btn_start_long"
                    android:textSize="@dimen/text_h3"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginBottom="@dimen/marg_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:src="@drawable/mbti2"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

</ScrollView>
